test/functions/jturner/lambda_param_ret_type.good
lambda_param_ret_type.chpl:1: error: 'param' return types are not allowed in lambdas
