test/functions/jturner/lambda_param_ret_type.chpl
var f = lambda() param { return 3; };

writeln(f());
